<resources>
    <string name="app_name">V-check</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_food_result_loding">FoodResultLoding</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="prevArrow">◀</string>
    <string name="nextArrow">▶</string>
    <string name="exampleDateString">2021.01.01</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="Thursday">목</string>
    <string name="Friday">금</string>
    <string name="Saturday">토</string>
    <string name="toToday">오늘 날짜</string>
    <string name="inputSPN">식품품목번호를 입력해주세요</string>
    <string name="began_place_search">비건 식당 검색</string>
</resources>